--- a/MilkyWay/Detail/Detail.storyboard
+++ b/MilkyWay/Detail/Detail.storyboard
@@ -11,13 +11,13 @@
         <!--Nasa Image Detail View Controller-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController id="Y6W-OH-hqX" customClass="NasaImageDetailViewController" customModule="MilkyWay" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="NasaImageDetailViewController" id="Y6W-OH-hqX" customClass="NasaImageDetailViewController" customModule="MilkyWay" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fx8-Ga-aQZ">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3T0-UU-XeG" userLabel="Content View">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="363.5"/>
@@ -84,9 +84,12 @@
                             <constraint firstItem="fx8-Ga-aQZ" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="uii-S4-cbh"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" largeTitleDisplayMode="never" id="OoD-e3-sFv"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="descriptionLabel" destination="CKW-dy-ol9" id="8RD-OX-dyW"/>
                         <outlet property="image" destination="xZg-W7-Gbi" id="BDr-MJ-gyv"/>
+                        <outlet property="labelStack" destination="Zfz-wb-ekN" id="tvw-Nc-8fi"/>
                         <outlet property="subTitle" destination="Zhv-l4-OHa" id="eVx-Zy-Mlk"/>
                         <outlet property="titleLabel" destination="u5D-J8-wAe" id="BYv-vQ-ALa"/>
                     </connections>
